style.css
:root {
  --grid-cols: 1;
  --grid-rows: 1;
}

.etch-container {
  display: flex;
  align-items: center;
  justify-content: center;
}
.etch-a-sketch {
  background-color: #ff686b;
  width: 800px;
  height: 600px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 50px;
}
.board {
  background-color: white;
  width: 10px;
  height: 10px;
  align-self: center;
  justify-self: center;
}

#board-container {
  max-width: 800px;
  max-height: 550px;
  display: grid;
  grid-template-columns: repeat(var(--grid-cols), 0fr);
  grid-template-rows: repeat(var(--grid-rows), 0fr);
}

.board:hover {
  transform: scale(1.5);
  background-color: goldenrod;
}

.inputs {
  width: 700px;
  height: 20px;
  margin-top: 25px;
  border-radius: 10px;
  display: flex;
  justify-content: space-between;
}

.slider {
  -webkit-appearance: none; /* Override default CSS styles */
  appearance: none;
  width: 25%; /* Full-width */
  height: 25px; /* Specified height */
  background: #ffffff; /* Grey background */
  outline: none; /* Remove outline */
  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
  -webkit-transition: 0.2s; /* 0.2 seconds transition on hover */
  transition: opacity 0.2s;
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none; /* Override default look */
  appearance: none;
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #ff0000; /* Green background */
  cursor: pointer; /* Cursor on hover */
  /* border-radius: 50%; */
}

.slider:hover {
  opacity: 1; /* Fully shown on mouse-over */
}

.buttons {
  border-radius: 50%;
  width: 80px;
  height: 80px;
  background: #ffffff;
  text-align: center;
}

